# Triton-AI-Racer-ROS2

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/workflows/: galactic-build-all-ci.yml
deploy/model_190/: Dockerfile  README.md  build_and_push.sh  build_docker.sh  join.sh  launch.sh  launch_dev.sh  launch_latest.sh
doc/: install_host_pc.md  tai_platform_note.md  use_tai_racer_for_your_project.md
src/core/pilot/: CMakeLists.txt  package.xml
src/core/pilot/src/: pilot_script.cpp  prev_pilot_script.cpp
src/human_computer_interface/base_station/: CMakeLists.txt  package.xml
src/human_computer_interface/base_station/src/: base_station_script.cpp
src/human_computer_interface/teleop/hri-raptor-joy-conversion/: CMakeLists.txt  package.xml
src/interface/donkeysim_tai_interface/: package.xml  setup.cfg  setup.py
src/interface/donkeysim_tai_interface/design/: README.md
src/interface/donkeysim_tai_interface/donkeysim_tai_interface/: donkeysim_client.py  donkeysim_client_node.py
src/interface/donkeysim_tai_interface/launch/: test_donkeysim.launch.py
src/interface/donkeysim_tai_interface/param/: donkeysim_client.yaml  donkeysim_node.yaml
src/interface/js_tai_interface/: CMakeLists.txt  package.xml
src/interface/js_tai_interface/include/js_tai_interface/: js_tai_interface_node.hpp
src/interface/js_tai_interface/launch/: js_tai_interface.launch.py
src/interface/js_tai_interface/param/: js_tai_interface.yaml
src/interface/js_tai_interface/src/: js_tai_interface_node.cpp
src/interface/lgsvl_tai_interface/: CMakeLists.txt  package.xml
src/interface/lgsvl_tai_interface/include/lgsvl_tai_interface/: lgsvl_receiver.hpp  lgsvl_sender.hpp
src/interface/lgsvl_tai_interface/src/: lgsvl_sender.cpp
src/interface/raptor_tai_interface/: CMakeLists.txt  package.xml
src/interface/raptor_tai_interface/include/raptor_tai_interface/: raptor_tai_interface.hpp
src/interface/raptor_tai_interface/param/: raptor_tai.yaml
src/interface/raptor_tai_interface/src/: raptor_tai_interface.cpp
src/interface/raptor_tai_interfaces/: CMakeLists.txt  package.xml
src/interface/raptor_tai_interfaces/param/: raptor_tai.yaml
src/interface/raptor_tai_interfaces/src/: raptor_tai_interfaces.cpp
src/interface/tai_interface/: CMakeLists.txt  package.xml
src/interface/tai_interface/msg/: Brake.msg  FloatArray.msg  RaceFlag.msg  RaceStage.msg  RaceState.msg  Steer.msg  Throttle.msg  VehicleControl.msg  VehicleOdometry.msg  VehicleOperationMode.msg
src/interface/tritonairacer_interfaces/: CMakeLists.txt  package.xml
src/interface/tritonairacer_interfaces/msg/: Brake.msg  RaceFlag.msg  RaceStage.msg  RaceState.msg  Steer.msg  Throttle.msg  TritonAIRacerControl.msg  VehicleMode.msg
src/interface/tritonairacer_interfaces/srv/: EStop.srv
src/localization/design/: README.md
src/localization/odometry_localizer/: CMakeLists.txt  package.xml
src/localization/odometry_localizer/src/: odometry_localizer.cpp  odometry_localizer_node.cpp
src/localization/particle_filter_py/: package.xml  setup.cfg  setup.py
src/localization/particle_filter_py/particle_filter_py/: particle_filter.py  particle_filter_py_node.py
src/localization/transform_manager/: CMakeLists.txt  package.xml
src/localization/transform_manager/design/: README.md
src/localization/transform_manager/include/transform_manager/: transform_manager_node.hpp
src/localization/transform_manager/param/: odometry_localizer.yaml
src/localization/transform_manager/src/: transform_manager_node.cpp
src/mapping/simple_mapping/: package.xml  setup.cfg  setup.py
src/mapping/simple_mapping/param/: simple_mapping.yaml
src/mapping/simple_mapping/simple_mapping/: simple_mapping.py  simple_mapping_node.py
src/navigation/waypoint_following/: package.xml  setup.cfg  setup.py
src/navigation/waypoint_following/launch/: waypoint_following.launch.py
src/navigation/waypoint_following/params/: multi_vehicle_config.yaml  wp_follow_config.yaml
src/navigation/waypoint_following/waypoint_following/: dynamic_wp_follow_node.py  wp_follow.py  wp_follow_node.py
src/navigation/waypoint_interfaces/: CMakeLists.txt  package.xml
src/navigation/waypoint_interfaces/action/: FollowWaypoints.action
src/navigation/waypoint_interfaces/msg/: GNSSWaypoint.msg  WaypointFollowStatus.msg
src/navigation/waypoint_interfaces/srv/: GetWaypointLogState.srv  TerminateWaypointLogging.srv  ToggleWaypointLogging.srv
src/navigation/waypoint_logger/: package.xml  setup.cfg  setup.py
src/navigation/waypoint_logger/launch/: log_with_joystick.launch.py  waypoint_logging.launch.py
src/navigation/waypoint_logger/params/: wp_logger_config.yaml
src/one_fifth_solution/pilot_js/: CMakeLists.txt  package.xml
src/one_fifth_solution/pilot_js/include/pilot_js/: pilot_js_node.hpp
src/one_fifth_solution/pilot_js/launch/: drive_ego_1.launch.py  drive_ego_2.launch.py  drive_with_joy.launch.py
src/one_fifth_solution/pilot_js/params/: pilot_config.yaml
src/one_fifth_solution/pilot_js/src/: pilot_js_node.cpp
src/vehicle_launch/donkeysim_launch/: CMakeLists.txt  package.xml
src/vehicle_launch/kart_launch/: CMakeLists.txt  package.xml
src/vehicle_launch/model_190_launch/: CMakeLists.txt  package.xml
src/vehicle_launch/model_190_launch/launch/: drive_and_map.launch.py  drive_js.launch.py
src/vehicle_launch/model_190_launch/param/driver/: imu.yaml
src/vehicle_launch/sensor_launch/: CMakeLists.txt  package.xml
src/vehicle_launch/sensor_launch/launch/: localization.launch.py  log_wp_with_nmea.launch.py  nmea.launch.py  xsens.launch.py
src/vehicle_launch/sensor_launch/param/: localization.yaml  nmea.yaml  xsens.yaml
teleop/: CMakeLists.txt  README.md  package.xml
teleop/config/: params.yaml
teleop/launch/: teleop.launch.py  teleop_launch.py
teleop/src/: teleop_node.cpp
teleop_interfaces/: CMakeLists.txt  README.md  package.xml
teleop_interfaces/srv/: EmergencyStop.srv
tools/: help.py
tools/ros2_dev_tools/: ament_uncrusify_all.sh
tools/ros2_dev_tools/template_package/: CMakeLists.txt  package.xml
(+30 files in other folders)
