<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>donkeysim_tai_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hxue@ucsd.edu">haoru</maintainer>
  <license>TODO: License declaration</license>

  <depend>tai_interface</depend>
  <depend>python-numpy</depend>
  <depend>python-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>python-transforms3d-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
