<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_mapping</name>
  <version>0.0.0</version>
  <description>simple 2D LiDAR mapping package</description>
  <maintainer email="hxue@ucsd.edu">Haoru Xue</maintainer>
  <license>Apache 2.0</license>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
