<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_following</name>
  <version>0.0.1</version>
  <description>Run Waypoint Following</description>
  <maintainer email="hxue@ucsd.edu">Haoru Xue</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tritonairacer_interfaces</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-simple-pid-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
