<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilot_js</name>
  <version>0.0.0</version>
  <description>Select control signal (joystick or autopilot_js) and send to vesc</description>
  <maintainer email="hxue@ucsd.edu">root</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>lgsvl_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>