<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_190_launch</name>
  <version>0.0.1</version>
  <description>Launch Model 190</description>
  <maintainer email="hxue@ucsd.edu">Haoru Xue</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2_razor_imu</exec_depend>
  <exec_depend>ldlidar</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
