<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_launch</name>
  <version>0.0.1</version>
  <description>Launch sensors</description>
  <maintainer email="hxue@ucsd.edu">Haoru Xue</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>bluespace_ai_xsens_ros_mti_driver</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
